--- a/packages/nodejs/package.json
+++ b/packages/nodejs/package.json
@@ -18,7 +18,8 @@
   "scripts": {
     "test": "vitest run --passWithNoTests",
     "lint": "prettier src/**/*.ts --check",
-    "build": "rm -rf ./dist && tsup"
+    "build": "rm -rf ./dist && tsup",
+    "prepublish": "npm run build"
   },
   "devDependencies": {
     "microbundle": "^0.15.1",
