--- a/packages/function-bay/package.json
+++ b/packages/function-bay/package.json
@@ -1,10 +1,11 @@
 {
   "name": "function-bay",
-  "version": "1.0.0",
+  "version": "1.0.13",
   "publishConfig": {
     "access": "public"
   },
   "files": [
+    "cli.js",
     "src/**",
     "dist/**",
     "README.md",
@@ -12,18 +13,11 @@
   ],
   "author": "Tobias Herber",
   "license": "Apache 2",
-  "type": "module",
   "source": "src/index.ts",
-  "exports": {
-    "types": "./dist/index.d.ts",
-    "require": "./dist/index.cjs",
-    "import": "./dist/index.module.js",
-    "default": "./dist/index.module.js"
-  },
   "main": "./dist/index.cjs",
-  "module": "./dist/index.module.js",
-  "types": "dist/index.d.ts",
-  "unpkg": "./dist/index.umd.js",
+  "bin": {
+    "function-bay": "./cli.js"
+  },
   "scripts": {
     "test": "vitest run --passWithNoTests",
     "lint": "prettier src/**/*.ts --check",
@@ -41,6 +35,7 @@
     "@function-bay/build": "^1.0.0",
     "@function-bay/types": "^1.0.0",
     "@function-bay/utils": "^1.0.0",
-    "@lowerdeck/validation": "^1.0.4"
+    "@lowerdeck/validation": "^1.0.4",
+    "@types/bun": "^1.3.5"
   }
 }
