--- a/service/package.json
+++ b/service/package.json
@@ -19,6 +19,7 @@
     "@aws-sdk/client-iam": "^3.957.0",
     "@function-bay/types": "^1.0.0",
     "@lowerdeck/api-mux": "^1.0.1",
+    "@lowerdeck/cache": "^1.0.0",
     "@lowerdeck/canonicalize": "^1.0.4",
     "@lowerdeck/cron": "^1.0.4",
     "@lowerdeck/encryption": "^1.0.6",
@@ -34,7 +35,7 @@
     "@lowerdeck/service": "^1.0.3",
     "@lowerdeck/slugify": "^1.0.4",
     "@lowerdeck/validation": "^1.0.4",
-    "@metorial-services/forge-client": "^1.0.0",
+    "@metorial-services/forge-client": "^1.0.1",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "date-fns": "^4.1.0",
