--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "clients/*"
   ],
   "dependencies": {
+    "@lowerdeck/testing-tools": "^1.0.1",
     "@metorial-services/forge-client": "^1.0.0",
     "npm-run-all": "^4.1.5"
   }
