--- a/service/docker-compose.dev.yml
+++ b/service/docker-compose.dev.yml
@@ -1,7 +1,6 @@
-version: '3.8'
-
 services:
   postgres:
+    profiles: ['infra']
     image: postgres:16-alpine
     container_name: function-bay-postgres
     restart: unless-stopped
@@ -10,46 +9,71 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: function-bay
     volumes:
-      - postgres_data3:/var/lib/postgresql/data
+      - postgres_data:/var/lib/postgresql/data
+      - ./init-test-db.sh:/docker-entrypoint-initdb.d/init-test-db.sh
+    ports:
+      - '45432:5432'
     networks:
       - function-bay-network
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U postgres']
+      interval: 5s
+      timeout: 5s
+      retries: 10
 
   redis:
+    profiles: ['infra']
     image: redis:7-alpine
     container_name: function-bay-redis
     restart: unless-stopped
+    ports:
+      - '6379:6379'
     networks:
       - function-bay-network
+    healthcheck:
+      test: ['CMD', 'redis-cli', 'ping']
+      interval: 5s
+      timeout: 5s
+      retries: 10
 
   object-storage:
+    profiles: ['infra']
     image: ghcr.io/metorial/object-storage:latest
+    container_name: function-bay-object-storage
+    restart: unless-stopped
     volumes:
       - object-store-data:/app/data
     environment:
       RUST_LOG: info
-      AWS_ACCESS_KEY_ID: ${OBJECT_STORAGE_AWS_ACCESS_KEY_ID}
-      AWS_SECRET_ACCESS_KEY: ${OBJECT_STORAGE_AWS_SECRET_ACCESS_KEY}
-      AWS_REGION: ${OBJECT_STORAGE_AWS_REGION}
-      
+
       OBJECT_STORE__SERVER__HOST: 0.0.0.0
       OBJECT_STORE__SERVER__PORT: 52010
-      OBJECT_STORE__BACKEND__TYPE: s3
-      OBJECT_STORE__BACKEND__REGION: ${OBJECT_STORAGE_AWS_REGION}
-      OBJECT_STORE__BACKEND__PHYSICAL_BUCKET: ${OBJECT_STORAGE_AWS_S3_BUCKET}
-
-    container_name: function-bay-object-storage
-    restart: unless-stopped
+      OBJECT_STORE__BACKEND__TYPE: ${OBJECT_STORAGE_BACKEND_TYPE:-local}
+      OBJECT_STORE__BACKEND__ROOT_PATH: ${OBJECT_STORAGE_BACKEND_ROOT_PATH:-/app/data}
+      OBJECT_STORE__BACKEND__REGION: ${OBJECT_STORAGE_AWS_REGION:-us-east-1}
+      OBJECT_STORE__BACKEND__PHYSICAL_BUCKET: ${OBJECT_STORAGE_AWS_S3_BUCKET:-function-bay-local}
+      AWS_ACCESS_KEY_ID: ${OBJECT_STORAGE_AWS_ACCESS_KEY_ID:-test}
+      AWS_SECRET_ACCESS_KEY: ${OBJECT_STORAGE_AWS_SECRET_ACCESS_KEY:-test}
+      AWS_REGION: ${OBJECT_STORAGE_AWS_REGION:-us-east-1}
+    ports:
+      - '52010:52010'
     networks:
       - function-bay-network
+    healthcheck:
+      test: ['CMD-SHELL', 'curl -f http://localhost:52010/health || exit 1']
+      interval: 5s
+      timeout: 5s
+      retries: 10
 
-  forge:  
+  forge:
+    profiles: ['infra']
     image: ghcr.io/metorial/forge:latest
     container_name: function-bay-forge
     restart: unless-stopped
     environment:
       DATABASE_URL: postgresql://postgres:postgres@postgres:5432/forge
       REDIS_URL: redis://redis:6379/0
-      
+
       ENCRYPTION_KEY: ${ENCRYPTION_KEY}
       DEFAULT_PROVIDER: aws.code-build
 
@@ -57,32 +81,43 @@ services:
       LOG_BUCKET_NAME: logs
       ARTIFACT_BUCKET_NAME: artifacts
 
-      CODE_BUILD_AWS_REGION: ${CODE_BUILD_AWS_REGION:-}
-      CODE_BUILD_AWS_ACCESS_KEY_ID: ${CODE_BUILD_AWS_ACCESS_KEY_ID:-}
-      CODE_BUILD_AWS_SECRET_ACCESS_KEY: ${CODE_BUILD_AWS_SECRET_ACCESS_KEY:-}
+      CODE_BUILD_AWS_REGION: ${CODE_BUILD_AWS_REGION:-us-east-1}
+      CODE_BUILD_AWS_ACCESS_KEY_ID: ${CODE_BUILD_AWS_ACCESS_KEY_ID:-test}
+      CODE_BUILD_AWS_SECRET_ACCESS_KEY: ${CODE_BUILD_AWS_SECRET_ACCESS_KEY:-test}
       CODE_BUILD_PROJECT_NAME: ${CODE_BUILD_PROJECT_NAME:-}
       CODE_BUILD_ROLE_ARN: ${CODE_BUILD_ROLE_ARN:-}
+    ports:
+      - '52020:52020'
     depends_on:
-      - postgres
-      - redis
-      - object-storage
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      object-storage:
+        condition: service_healthy
+    healthcheck:
+      test: ['CMD-SHELL', 'curl -s http://localhost:52020/ > /dev/null || exit 1']
+      interval: 5s
+      timeout: 5s
+      retries: 10
     networks:
       - function-bay-network
 
-  function-bay:  
+  function-bay:
+    profiles: ['service']
     build:
       context: .
       dockerfile: dev.Dockerfile
     container_name: function-bay-service
     restart: unless-stopped
     ports:
-      - "52030:52030"
+      - '52030:52030'
     environment:
       DATABASE_URL: postgresql://postgres:postgres@postgres:5432/function-bay
       REDIS_URL: redis://redis:6379/0
-      
+
       ENCRYPTION_KEY: ${ENCRYPTION_KEY}
-      DEFAULT_PROVIDER: ${DEFAULT_PROVIDER}
+      DEFAULT_PROVIDER: ${DEFAULT_PROVIDER:-aws.lambda}
 
       OBJECT_STORAGE_URL: http://object-storage:52010
       BUNDLE_BUCKET_NAME: bundles
@@ -93,21 +128,29 @@ services:
       LAMBDA_AWS_ACCESS_KEY_ID: ${LAMBDA_AWS_ACCESS_KEY_ID:-}
       LAMBDA_AWS_SECRET_ACCESS_KEY: ${LAMBDA_AWS_SECRET_ACCESS_KEY:-}
       LAMBDA_ROLE_ARN: ${LAMBDA_ROLE_ARN:-}
-
     volumes:
       - ./src:/app/src:ro
       - ./package.json:/app/package.json:ro
       - ./tsconfig.json:/app/tsconfig.json:ro
     depends_on:
-      - postgres
-      - redis
-      - object-storage
-      - forge
+      postgres:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
+      object-storage:
+        condition: service_healthy
+      forge:
+        condition: service_healthy
+    healthcheck:
+      test: ['CMD-SHELL', 'curl -s http://localhost:52030/ > /dev/null || exit 1']
+      interval: 5s
+      timeout: 5s
+      retries: 10
     networks:
       - function-bay-network
 
 volumes:
-  postgres_data3:
+  postgres_data:
     driver: local
   object-store-data:
     driver: local
