--- a/service/package.json
+++ b/service/package.json
@@ -5,10 +5,23 @@
   "private": true,
   "scripts": {
     "start": "bun ./src/server.ts",
-    "dev": "docker compose -p function-bay -f ./docker-compose.dev.yml up --pull always --build function-bay forge"
+    "dev": "bun --watch ./src/server.ts",
+    "infra:up": "docker compose -p function-bay -f ./docker-compose.dev.yml --profile infra up -d --pull always",
+    "infra:down": "docker compose -p function-bay -f ./docker-compose.dev.yml --profile infra down",
+    "infra:logs": "docker compose -p function-bay -f ./docker-compose.dev.yml --profile infra logs -f",
+    "db:generate": "bun prisma generate",
+    "db:push:dev": "sh -c 'set -a; . .env; set +a; bun prisma db push'",
+    "db:push:test": "sh -c 'set -a; . .env.test; set +a; bun prisma db push'",
+    "db:push": "bun run db:push:dev && bun run db:push:test",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@lowerdeck/testing-tools": "^1.0.1",
+    "@types/bun": "latest",
+    "@types/lodash": "^4.17.23",
+    "vitest": "^3.0.5"
   },
   "peerDependencies": {
     "typescript": "^5"
