--- a/service/docker-compose.dev.yml
+++ b/service/docker-compose.dev.yml
@@ -142,7 +142,11 @@ services:
       forge:
         condition: service_healthy
     healthcheck:
-      test: ['CMD-SHELL', 'curl -s http://localhost:52030/ > /dev/null || exit 1']
+      test:
+        [
+          'CMD-SHELL',
+          "bun -e \"fetch('http://localhost:52030/').then(()=>process.exit(0)).catch(()=>process.exit(1))\""
+        ]
       interval: 5s
       timeout: 5s
       retries: 10
