--- a/service/.env.ci
+++ b/service/.env.ci
@@ -1,4 +1,4 @@
-DATABASE_URL=postgresql://postgres:postgres@postgres:5432/function-bay
+DATABASE_URL=postgresql://postgres:postgres@postgres:5432/function-bay-test
 REDIS_URL=redis://redis:6379/0
 OBJECT_STORAGE_URL=http://object-storage:52010
 BUNDLE_BUCKET_NAME=bundles
