--- a/service/package.json
+++ b/service/package.json
@@ -13,15 +13,15 @@
     "db:push:dev": "sh -c 'set -a; . .env; set +a; bun prisma db push'",
     "db:push:test": "sh -c 'set -a; . .env.test; set +a; bun prisma db push'",
     "db:push": "bun run db:push:dev && bun run db:push:test",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "bunx vitest run --passWithNoTests",
+    "test:watch": "bunx vitest watch",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
     "@lowerdeck/testing-tools": "^1.0.1",
     "@types/bun": "latest",
     "@types/lodash": "^4.17.23",
-    "vitest": "^3.0.5"
+    "vitest": "4.0.17"
   },
   "peerDependencies": {
     "typescript": "^5"
@@ -53,6 +53,7 @@
     "@prisma/client": "^7.2.0",
     "date-fns": "^4.1.0",
     "jszip": "^3.10.1",
+    "lodash": "4.17.21",
     "object-storage-client": "^0.2.5",
     "prisma": "^7.2.0",
     "prisma-json-types-generator": "^4.0.1",
