--- a/service/package.json
+++ b/service/package.json
@@ -47,6 +47,7 @@
     "@lowerdeck/rpc-server": "^1.0.4",
     "@lowerdeck/service": "^1.0.3",
     "@lowerdeck/slugify": "^1.0.4",
+    "@lowerdeck/snowflake": "^1.0.2",
     "@lowerdeck/validation": "^1.0.4",
     "@metorial-services/forge-client": "^1.0.3",
     "@prisma/adapter-pg": "^7.2.0",
