--- a/service/package.json
+++ b/service/package.json
@@ -10,8 +10,8 @@
     "infra:down": "docker compose -p function-bay -f ./docker-compose.dev.yml --profile infra down",
     "infra:logs": "docker compose -p function-bay -f ./docker-compose.dev.yml --profile infra logs -f",
     "db:generate": "bun prisma generate",
-    "db:push:dev": "sh -c 'set -a; . .env; set +a; bun prisma db push'",
-    "db:push:test": "sh -c 'set -a; . .env.test; set +a; bun prisma db push'",
+    "db:push:dev": "sh -c 'set -a; . .env; set +a; bun prisma db push --accept-data-loss'",
+    "db:push:test": "sh -c 'set -a; . .env.test; set +a; bun prisma db push --accept-data-loss'",
     "db:push": "bun run db:push:dev && bun run db:push:test",
     "test": "bunx vitest run --passWithNoTests",
     "test:watch": "bunx vitest watch",
@@ -48,10 +48,12 @@
     "@lowerdeck/service": "^1.0.3",
     "@lowerdeck/slugify": "^1.0.4",
     "@lowerdeck/snowflake": "^1.0.2",
+    "@lowerdeck/sentry": "^1.0.2",
     "@lowerdeck/validation": "^1.0.4",
     "@metorial-services/forge-client": "^1.0.3",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "@sentry/bun": "^10.38.0",
     "date-fns": "^4.1.0",
     "jszip": "^3.10.1",
     "lodash": "4.17.21",
